--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
 * {
     margin: 0;
@@ -29,26 +28,56 @@ h1, h2 {
 
 /* navigation links */
 
-#menu{
+#menu {
     font-size: 110%;
     letter-spacing: 4px;
-}
-
-#menu li {
-    float: right;
-    margin-right: 30px;
-    list-style-type: none;
 }
 
 #menu, #logo {
     line-height: 75px;
 }
 
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+}
+
 #menu a {
     text-decoration: none;
-    color:inherit;
+    color: inherit;
 }
 
 #menu a:hover {
-    border-bottom: 1px solid #6e83e0;
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+  
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../images/hero-image.webp') no-repeat center center;
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+
+}
+
+@keyframes hero-zoom {
+    from {
+            transform: scale(1);
+    }
+    to {
+transform: scale(1.1);
+    }
 }
