--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ h1, h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
+    position: relative;
   
 }
 
@@ -80,4 +81,23 @@ h1, h2 {
     to {
 transform: scale(1.1);
     }
+}
+
+#cover-text, cover-text h2 {
+    color: antiquewhite;
+}
+
+#cover-text {
+    font-size: 130%;
+    font-family: Oswalt, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    width: 300px;
+    height: 200px;
+    padding-top: 30px;
+    padding-left: 10px;
+    background-color: rgb(200, 12, 12, .6);
+    bottom: 30px;
+    right: 150px;
+    position: absolute;
 }
