--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,51 +57,62 @@ h1, h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
+/* hero image and cover text */
+
 #hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
     position: relative;
-  
+}
+
+#cover-text, #cover-text h2 {
+    color: #fff;
 }
 
 #hero-image {
     height: 600px;
     width: 100%;
     background: url('../images/hero-image.webp') no-repeat center center;
+
+    /* animates zoom effect on loading page */
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
-
 }
 
+/* creates the level of zoom for hero image */
 @keyframes hero-zoom {
-    from {
-            transform: scale(1);
+    from{
+        transform: scale(1);
     }
-    to {
-transform: scale(1.1);
+    to{
+        transform: scale(1.1);
     }
-}
-
-#cover-text, cover-text h2 {
-    color: antiquewhite;
 }
 
 #cover-text {
     font-size: 130%;
-    font-family: Oswalt, sans-serif;
+    font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
+
     width: 300px;
     height: 200px;
-    padding-top: 30px;
+
+    padding-top: 40px;
     padding-left: 10px;
-    background-color: rgb(200, 12, 12, .6);
+
+    background-color: rgba(241, 109, 107, .7);
+
     bottom: 30px;
     right: 150px;
+
     position: absolute;
 }
+
+/* club ethos */
 
 #club-ethos {
     height: 600px;
@@ -111,19 +122,68 @@ transform: scale(1.1);
     padding-top: 30px;
     width: 33%;
     float: left;
-    background-color: aqua;
 }
 
 #right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: #252525;
 }
 
 #center-about {
-    padding-top: 30px;
     width: 33%;
     margin: 0 auto;
-    background-color: bisque;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading p {
+    text-align: right;
+}
+
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url('../images/ethos-center-image.jpg') no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
